crates/zenith/tests/snapshots/screens__session_after_calls__160x48__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys















   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5 APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every key.
 › /ping hello
    ok   pong in 0.52 ms · 0.17 ms in SOLAR · echo hello · solar.ping 1.0.0 · #3
 › /call system.info
    ok   system.info 1.0.0 · 0.61 ms · 0.17 ms in SOLAR · #4
   arch                 x86_64
   cpu_count            16
   current_dir          /home/lab/zenith
   executable           /home/lab/solar/target/release/solar
   os                   linux
   os_build             null
   os_family            unix
   os_name              AlmaLinux
   os_release           "9.8"
   path_list_separator  :
   path_separator       /
   pointer_width        64
   temp_dir             /tmp
 › /describe solar.pign
    error   NOT_FOUND · API_NOT_FOUND · solar.describe · 0.31 ms · #5
   No API is registered under the name solar.pign.
   /api    expected  solar.ping
           received  solar.pign
           hint      Did you mean "solar.ping"? The edit distance is 2.
           docs      docs/ERRORS.md#not_found
 › /call solar.version
   ∙ solar.version, waiting 300.0 ms
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.31 ms ─── in orbit 3s ────────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0:153-153 #FFC23D on #0B0C14 bold
16:  3-3   #FFC23D on #0B0C14
18:  0-13  #FFC23D on #0B0C14
19:  3-6   #FFC23D on #0B0C14 bold reversed
19:  9-12  #FFC23D on #0B0C14 bold
20:  0-19  #FFC23D on #0B0C14
21:  3-6   #FFC23D on #0B0C14 bold reversed
21:  9-19  #FFC23D on #0B0C14
22:  3-21  #FFC23D on #0B0C14
23:  3-21  #FFC23D on #0B0C14
23: 24-25  #F5F1E8 on #0B0C14 bold
24:  3-21  #FFC23D on #0B0C14
25:  3-21  #FFC23D on #0B0C14
26:  3-21  #FFC23D on #0B0C14
27:  3-21  #FFC23D on #0B0C14
28:  3-21  #FFC23D on #0B0C14
29:  3-21  #FFC23D on #0B0C14
30:  3-21  #FFC23D on #0B0C14
31:  3-21  #FFC23D on #0B0C14
32:  3-21  #FFC23D on #0B0C14
33:  3-21  #FFC23D on #0B0C14
33: 24-25  #F5F1E8 on #0B0C14 bold
34:  3-21  #FFC23D on #0B0C14
35:  0-22  #FFC23D on #0B0C14
36:  3-9   #FFC23D on #0B0C14 bold reversed
36: 12-20  #FFC23D on #0B0C14 bold
36: 24-36  #FFC23D on #0B0C14 bold
36: 37-53  #FFC23D on #0B0C14
38:  3-8   #FFC23D on #0B0C14
42:  0-21  #FFC23D on #0B0C14
43:  3-3   #FFC23D on #0B0C14
43:  5-17  #FFC23D on #0B0C14
45:  1-3   #FFC23D on #0B0C14
47:  3-3   #FFC23D on #0B0C14
47:  7-17  #FFC23D on #0B0C14 bold
